--- a/app/styles/modules/dashboard.css
+++ b/app/styles/modules/dashboard.css
@@ -36,3 +36,192 @@
     align-items: center;
     gap: 8px;
 }
+
+/* _____________________ */
+.sidebar_left {
+    padding: 1rem;
+    background-color: #d7dfff;
+    margin: 1rem 0;
+    border-radius: 8px;
+}
+.sidebar_left > nav {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+}
+
+
+.dashboard-container {
+    width: 100%;
+    display: flex;
+    padding: 1rem 0 0 0;
+    justify-content: center;
+    box-sizing: border-box;
+    gap: 1rem;
+}
+.dashboard-container > aside {
+    display: flex;
+    flex-direction: column;
+}
+.dashboard-container > aside > nav {
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width: 800px) {
+    .achor-link {
+        display: none;
+    }
+}
+
+
+
+/* mid */
+.content-posts {
+    min-width: 550px;
+    max-width: 550px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.user-post-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: #d7dfff;
+    padding: 0.5rem;
+    border-radius: 8px;
+}
+
+.user-post-photo {
+    width: 40px;
+    height: 40px;
+    margin-top: 0.5rem;
+}
+.user-post-photo img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+/* FORM */
+.user-post-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+}
+.user-post-form > textarea {
+    width: 100%;
+    padding: 0.5rem 1rem 0.5rem 0.5rem;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: var(--text-primary);
+    resize: none;
+    min-height: 2rem;
+}
+.user-post-form > hr {
+    width: 100%;
+    border: none;
+    border-top: 1px solid var(--border-color);
+}
+.user-post-form > button {
+    background-color: var(--primary-color);
+    width: fit-content;
+    border: none;
+    padding: 8px 10px;
+    color: white;
+    font-weight: 600;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+.user-post-form > button:hover {
+    background-color: var(--primary-hover);
+}
+
+/* right */
+.aside-right {
+    padding: 1rem 0;
+}
+
+@media (max-width: 800px) {
+    .aside-right {
+        display: none!important;
+    }
+}
+
+/* user-posts */
+.user-posts {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    scrollbar-width: none;
+    overflow-y: auto;
+}
+
+.user-post {
+    width: 100%;
+    display: flex;
+    background-color: #d7dfff;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.user-post-header {
+    width: 50px;
+    height: 50px;
+}
+.user-post-header img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+
+.user-post-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 1rem;
+}
+.user-post-content h3 {
+    margin: 0;
+}
+.user-post-title {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.user-post-title button {
+    background-color: transparent;
+    border: none;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    top: -30%;
+    cursor: pointer;
+}
+
+.user-post-images {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+.user-post-images img {
+    border-radius: 0.5rem;
+}
+
+.user-post-actions {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 0.5rem;
+}
