--- a/app/styles/modules/base.css
+++ b/app/styles/modules/base.css
@@ -52,9 +52,8 @@ body {
 }
 
 #app {
-    display: flex;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    overflow-y: auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
