--- a/app/styles/modules/dashboard.css
+++ b/app/styles/modules/dashboard.css
@@ -78,9 +78,7 @@
 
 /* mid */
 .content-posts {
-    min-width: 550px;
-    max-width: 550px;
-    padding: 1rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -217,11 +215,13 @@
 }
 .user-post-images img {
     border-radius: 0.5rem;
+    width: 100%;
 }
 
 .user-post-actions {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     gap: 1rem;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 }
