--- a/app/styles/modules/layout.css
+++ b/app/styles/modules/layout.css
@@ -143,3 +143,18 @@
         padding: 0;
     }
 }
+
+#app-content > * {
+    animation: contentFadeIn 0.4s ease-in-out;
+}
+
+@keyframes contentFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
