--- a/app/styles/modules/layout.css
+++ b/app/styles/modules/layout.css
@@ -144,7 +144,7 @@
     }
 }
 
-#app-content > * {
+/* #app-content > * {
     animation: contentFadeIn 0.4s ease-in-out;
 }
 
@@ -157,4 +157,4 @@
         opacity: 1;
         transform: translateY(0);
     }
-}
+} */
